fet(#5): implementing Infrastructure models

--- a/LTS.Solution/Core/Crm/LTS.Crm.Domain/LTS.Crm.Domain.csproj
+++ b/LTS.Solution/Core/Crm/LTS.Crm.Domain/LTS.Crm.Domain.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Adapters\Driven\LTS.Infrastructure\LTS.Infrastructure.csproj" />
+    <ProjectReference Include="..\..\LTS.Core.Domain\LTS.Core.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
