--- a/LTS.Solution/Adapters/Driven/LTS.Infrastructure/LTS.Infrastructure.csproj
+++ b/LTS.Solution/Adapters/Driven/LTS.Infrastructure/LTS.Infrastructure.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Adapters\Driven\LTS.Infrastructure\LTS.Infrastructure.csproj" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
 </Project>
