--- a/LTS.Solution/Core/LTS.Core.Domain/LTS.Core.Domain.csproj
+++ b/LTS.Solution/Core/LTS.Core.Domain/LTS.Core.Domain.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Adapters\Driven\LTS.Infrastructure\LTS.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
