--- a/LTS.Solution/backend/1-Domain/LTS.Solution.Domain/LTS.Solution.Domain.csproj
+++ b/LTS.Solution/backend/1-Domain/LTS.Solution.Domain/LTS.Solution.Domain.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.12" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\3-Infrastructure\LTSSolution.Infrastructure\LTSSolution.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
