--- a/LTS.Solution/backend/1-Domain/LTS.Solution.Domain/LTS.Solution.Domain.csproj
+++ b/LTS.Solution/backend/1-Domain/LTS.Solution.Domain/LTS.Solution.Domain.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.12" />
+    <PackageReference Include="NetDevPack" Version="5.3.2" />
   </ItemGroup>
 
   <ItemGroup>
