--- a/LTS.Solution/LTS.Solution/backend/Modules/LTS.Module.Core/LTS.Module.Core.csproj
+++ b/LTS.Solution/LTS.Solution/backend/Modules/LTS.Module.Core/LTS.Module.Core.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="Dapper.Contrib" Version="2.0.78" />
     <PackageReference Include="MediatR" Version="9.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.13" />
   </ItemGroup>
